# novel-scraper

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
novelscraper/: __init__.py  __main__.py
novelscraper/models/: __init__.py  exceptions.py
novelscraper/scrapers/: __init__.py  basescraper.py  novelfull.py  wuxiaworld.py
