[tool.poetry]
name = "novelscraper"
version = "0.2.0"
description = "Novel Scraper is a CLI tool to help you download novels from different sources."
authors = ["Henry Rocha <henryrocha@protonmail.com>"]
license="MIT"
readme="README.md"
homepage="https://github.com/HenryRocha/novel-scraper"
repository="https://github.com/HenryRocha/novel-scraper"
keywords=["novelscraper", "scraper", "novel", "novels"]
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
novelscraper = "novelscraper.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
EbookLib = "^0.17.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
pylint = "^2.11.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
